// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CodeInput Display tests should display correctly 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class=""
    >
      <input
        autocomplete="one-time-code"
        class="input component"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`CodeInput Display tests should display correctly with error 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="shake"
    >
      <input
        autocomplete="one-time-code"
        class="input component hasError"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component hasError"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component hasError"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
      <input
        autocomplete=""
        class="input component hasError"
        inputmode="numeric"
        pattern="[0-9]*"
        value=""
      />
    </div>
    <div
      class="error"
      role="alert"
    >
      Error
    </div>
  </div>
</div>
`;
